--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <title>Document</title>
     <script src="app10.js"></script>
 </head>
-<body>
+<body style="background: blue;">
+
+ 
+    <p>Параграф</p>
+    <div>DIV</div>
+  
+
+  
+ 
     
 </body>
 </html>
