--- a/index.html
+++ b/index.html
@@ -7,10 +7,21 @@
     <title>Document</title>
     
 </head>
-<body style="background: blue;">
-<ul>
-</ul>
-
-<script src="app10.js"></script>   
+<body>
+  <!---
+    <ol id="elem">
+        <li>Привет</li>
+        <li>Мир</li>
+      </ol>
+      
+      <script>
+        function clear(elem) { 
+            document.querySelector("#elem").innerHTML = "";
+        }
+        console.log("Del");
+        clear(elem); 
+      </script>
+    -->
+<script src="app10.js"></script>
 </body>
 </html>
