--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="mycss.css" rel="stylesheet">
     <title>Document</title>
-    
 </head>
 <body>
+
+  <button class="pics" id="test"> 123</button>
+  <input  id="inp" type="text">
+  <img id="pic" src="a.jpg">
   <!---
     <ol id="elem">
         <li>Привет</li>
